# mfj

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  lib.rs  main.rs  metadata_store.rs
src/commands/: command_scores.rs  command_stats.rs
