[package]
name = "mfj"
version = "1.4.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2018"

[features]
default = ["dotenv"]

[dependencies]
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
reqwest = { version = "0.10.4", features = ["json"] }
clap = "2.33.0"
lazy_static = "1"
dotenv = { version = "0.15.0", optional = true }
humantime = "2.0.0"
chrono = "0.4.10"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.44"
ctrlc = "3.1.3"
flate2 = "1.0.13"
tokio = { version = "0.2.13", features = ["full"] }
