[package]
name = "mfj"
version = "1.5.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2018"

[features]
default = ["dotenv"]

[dependencies]
log = "0.4.11"
simple_logger = { version = "1.6.0", default-features = false }
lazy_static = "1.4.0"
dotenv = { version = "0.15.0", optional = true }
humantime = "2.0.1"
chrono = "0.4.15"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
ctrlc = "3.1.6"
flate2 = "1.0.16"
ureq = { version = "1.4.0", features = ["json"] }
anyhow = "1.0.32"
thiserror = "1.0.20"
argh = "0.1.3"
aho-corasick = "0.7.13"
